--- a/main.html
+++ b/main.html
@@ -128,7 +128,7 @@
                 <div class="telefons">
                     <img src="Icons/telephone-red.png">
                     <h3>Telefons:</h3>
-                    <p>+371 25450563</p>
+                    <a href="+371 25450563">+371 25450563</a>
                 </div>
                 <div class="epasts">
                     <img src="Icons/email-red.png">
