--- a/index.html
+++ b/index.html
@@ -1,89 +1,88 @@
 <!DOCTYPE html>
 <html lang="lv">
-
 <head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-    </style>
+        </style>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&display=swap');
-    </style>
-    <style>
+        </style>
+        <style>
         @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap');
-    </style>
+      </style>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;700&display=swap');
-    </style>
-    <style>
+      </style>
+      <style>
         @import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300&family=Open+Sans:wght@300&display=swap');
-    </style>
+        </style>
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="icon" href="Icons/hm_tab.png" type="image/png">
     <script src="script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Hill media</title>
 </head>
-
 <body>
-    <nav>
-        <h1><a href="#" class="hm">Hill Media</a></h1>
-        <ul class="nav-links">
-            <li><a href="#" class="nav-link">Sākums</a></li>
-            <li><a href="#pakalpojumi" class="nav-link">Pakalpojumi</a></li>
-            <li><a href="#partneri" class="nav-link">Partneri</a></li>
-            <li><a href="#par-mums" class="nav-link">Par mums</a></li>
-            <li><a href="#contact-us" class="nav-link">Kontakti</a></li>
-        </ul>
-        <div class="nav-icon-container">
-            <a target="_blank" href="https://www.instagram.com/hill_media_/"><img src="Icons/instagram-red.png" title="Instagram" class="nav-ig"></a>
-            <a target="_blank" href="https://www.facebook.com/people/Hill-Media/100088573058946/"><img src="Icons/facebook-red.png" title="facebook" class="nav-fb"></a>
-        </div>
-        <div class="nav-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-    </nav>
+            <nav>
+                    <h1><a href="#" class="hm">Hill Media</a></h1>
+                    <ul class="nav-links">
+                        <li><a href="#" class="nav-link">Sākums</a></li>
+                        <li><a href="#pakalpojumi" class="nav-link">Pakalpojumi</a></li>
+                        <li><a href="#partneri" class="nav-link">Partneri</a></li>
+                        <li><a href="#par-mums" class="nav-link">Par mums</a></li>
+                        <li><a href="#contact-us" class="nav-link">Kontakti</a></li>
+                    </ul>
+                    <div class="nav-icon-container">
+                        <a target="_blank" href="https://www.instagram.com/hill_media_/"><img src="Icons/instagram-red.png" title="Instagram" class="nav-ig"></a>
+                        <a target="_blank" href="https://www.facebook.com/people/Hill-Media/100088573058946/"><img src="Icons/facebook-red.png" title="facebook" class="nav-fb"></a>
+                    </div>
+                    <div class="nav-button">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </div>
+            </nav>
 
-    <section class="portfolio">
-        <div class="image-container"></div>
-        <div class=" portfolio-text">
-            <h2>Lieliski stāsti ir tiem, kuri tos var parādīt!</h2>
-        </div>
-    </section>
-
-    <section class="pakalpojumi" id="pakalpojumi">
-        <h1 class="pakalpojumi-h1">Pakalpojumi</h1>
-        <div class="pakalpojumi-container">
-            <div class="satura-veidosana-div hidden-left">
-                <img src="Icons/camera-black.png" class="camera">
-                <div class="satura-veidosana-text-div">
-                    <h2>Satura veidošana</h2>
-                    <p>Veidojam foto, video saturu. Radām tekstus un komunicējam ar partneriem. Pēc vajadzības arī pārvaldām iesūtīto ziņu saturu. Veidojam reklāmas un dažādas akcijas un sadarbības. </p>
+        <section class="portfolio">
+            <div class="image-container"></div>
+            <div class=" portfolio-text">
+                <h2>Lieliski stāsti ir tiem, kuri tos var parādīt!</h2>
+            </div>
+        </section>
+    
+        <section class="pakalpojumi" id="pakalpojumi">
+            <h1 class="pakalpojumi-h1">Pakalpojumi</h1>
+            <div class="pakalpojumi-container">
+                <div class="satura-veidosana-div hidden-left">
+                    <img src="Icons/camera-black.png" class="camera">
+                    <div class="satura-veidosana-text-div">
+                        <h2>Satura veidošana</h2>
+                        <p>Veidojam foto, video saturu. Radām tekstus un komunicējam ar partneriem. Pēc vajadzības arī pārvaldām iesūtīto ziņu saturu. Veidojam reklāmas un dažādas akcijas un sadarbības. </p>
+                    </div>
+                </div>
+                <div class="soc-tikli-div hidden-right">
+                    <img src="Icons/social-media-black.png" class="soc-tikli">
+                    <div class="soc-tikli-text-div">
+                        <h2>Sociālo tīklu pārvaldīšana</h2>
+                        <p> Pārņemam jūsu uzņēmuma dažādus sociālos tīklus. Strādājam ar visām populārākajām vietnēm - Instagram, Facebook, Twitter, TikTok, Youtube u.c.</p>
+                    </div>
                 </div>
             </div>
-            <div class="soc-tikli-div hidden-right">
-                <img src="Icons/social-media-black.png" class="soc-tikli">
-                <div class="soc-tikli-text-div">
-                    <h2>Sociālo tīklu pārvaldīšana</h2>
-                    <p> Pārņemam jūsu uzņēmuma dažādus sociālos tīklus. Strādājam ar visām populārākajām vietnēm - Instagram, Facebook, Twitter, TikTok, Youtube u.c.</p>
+        </section>
+        <section class="partneri" id="partneri">
+            <h2 class="partneri-h1">Partneri</h2>
+            <div class="wrapper">
+                <div class="partneri-logo">
+                    <a target="_blank" href="https://my.synottip.lv/" class="partneri-logo-1"></a>
+                    <a target="_blank" href="https://www.melnagovs.lv/" class="partneri-logo-2"></a>
+                    <a target="_blank" href="https://jdfs.lv/" class="partneri-logo-3"></a>
+                    <a target="_blank" href="https://casino.joker.lv/" class="partneri-logo-4"></a>
+                    <a target="_blank" href="https://www.sky.lv/" class="partneri-logo-5"></a>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="partneri" id="partneri">
-        <h2 class="partneri-h1">Partneri</h2>
-        <div class="wrapper">
-            <div class="partneri-logo">
-                <a target="_blank" href="https://my.synottip.lv/" class="partneri-logo-1"></a>
-                <a target="_blank" href="https://www.melnagovs.lv/" class="partneri-logo-2"></a>
-                <a target="_blank" href="https://jdfs.lv/" class="partneri-logo-3"></a>
-                <a target="_blank" href="https://casino.joker.lv/" class="partneri-logo-4"></a>
-                <a target="_blank" href="https://www.sky.lv/" class="partneri-logo-5"></a>
-            </div>
-        </div>
-    </section>
+        </section>
     <section class="par-mums" id="par-mums">
         <h1 class="par-mums-h1">Par mums</h1>
         <div class="komanda">
@@ -103,7 +102,7 @@
     </section>
     <section class="contact-us" id="contact-us">
         <div class="contact-us-left-div">
-            <h1>Sazinies ar mums</h1>
+                <h1>Sazinies ar mums</h1>
             <div class="adrtel">
                 <div class="adrese">
                     <img src="Icons/location-red.png">
@@ -118,7 +117,7 @@
                 <div class="epasts">
                     <img src="Icons/email-red.png">
                     <h3>E-pasts:</h3>
-                    <p style="letter-spacing: 0.5px;">HillMediaRiga@gmail.com</p>
+                    <p style="letter-spacing: 0.5px;">HillMediaRiga@gmail.com</p> 
                 </div>
                 <div class="icon-container">
                     <a target="_blank" href="https://www.instagram.com/hill_media_/"><img src="Icons/instagram-red.png" title="Instagram" class="ig"></a>
@@ -141,5 +140,4 @@
         </div>
     </section>
 </body>
-
 </html>
